# babelModules

./: .gitignore  README.md
iCubBabelModules/: CMakeLists.txt  README.md
iCubBabelModules/app/: CMakeLists.txt
iCubBabelModules/app/scripts/: lipGazeCtrl.xml.template  run_modules_spike.xml
iCubBabelModules/src/: CMakeLists.txt
iCubBabelModules/src/lipGazeCtrl/: CMakeLists.txt
iCubBabelModules/src/lipGazeCtrl/include/: iCub_lip_gazeCtrl.h
iCubBabelModules/src/lipGazeCtrl/src/: iCub_lip_gazeCtrl.cpp  main.cpp
iCubBabelModules/src/namingModule/: CMakeLists.txt
iCubBabelModules/src/namingModule/include/: iCubNaming.h
iCubBabelModules/src/namingModule/src/: iCubNaming.cpp  main.cpp
pynnModules/IOComm/: yarpGrabber.py
pynnModules/Model/: areas.py  model.py  projections.py
pynnModules/Network/: gaussiancreatejose.py  spike_file_to_spike_array.py  transform_mapped_inputs.py  vector_topographic_activity_plot.py
pynnModules/Plotting/: mappings.py  plots.py
spinnakerModules/: CMakeLists.txt  README.md
spinnakerModules/src/: CMakeLists.txt
spinnakerModules/src/spinnaker_event_spikes_sender/: CMakeLists.txt
spinnakerModules/src/spinnaker_event_spikes_sender/include/: spinnakerIOinterface.h
spinnakerModules/src/spinnaker_event_spikes_sender/src/: spinnakerIOinterface.cpp
spinnakerModules/src/spinnaker_interface/: CMakeLists.txt
spinnakerModules/src/spinnaker_interface/include/: spikesPopulation.h  spinnakerIOinterface.h
spinnakerModules/src/spinnaker_interface/src/: main.cpp  spikesPopulation.cpp  spinnakerIOinterface.cpp
spinnakerModules/src/spinnaker_lip_spikes_receiver/: CMakeLists.txt
spinnakerModules/src/spinnaker_lip_spikes_receiver/include/: spinnakerIOinterface.h
spinnakerModules/src/spinnaker_lip_spikes_receiver/src/: main.cpp  spinnakerIOinterface.cpp
spinnakerModules/src/spinnaker_spikes_sender/: CMakeLists.txt
spinnakerModules/src/spinnaker_spikes_sender/include/: spinnakerIOinterface.h
spinnakerModules/src/spinnaker_spikes_sender/src/: spinnakerIOinterface.cpp
spinnakerModules/src/spinnaker_spikes_visualizer/: CMakeLists.txt
spinnakerModules/src/spinnaker_spikes_visualizer/include/: spinnakerVisualizer.h
spinnakerModules/src/spinnaker_spikes_visualizer/include/glut_framework/: GlutFramework.h  Vector.h
spinnakerModules/src/spinnaker_spikes_visualizer/include/raster_view/: RasterPlot.h
spinnakerModules/src/spinnaker_spikes_visualizer/include/utilities/: ColourReader.h
spinnakerModules/src/spinnaker_spikes_visualizer/src/: main.cpp  spinnakerVisualizer.cpp
spinnakerModules/src/spinnaker_spikes_visualizer/src/glut_framework/: GlutFramework.cpp  Keyboard.cpp  PerformanceTimer.cpp
spinnakerModules/src/spinnaker_spikes_visualizer/src/raster_view/: RasterPlot.cpp
spinnakerModules/src/spinnaker_spikes_visualizer/src/utilities/: ColourReader.cpp
